slightly change max value of animation to prevent overlap of backgrounds

--- a/style.css
+++ b/style.css
@@ -68,6 +68,6 @@ main {
   }
 
   to {
-    --scroll-percentage: 100%;
+    --scroll-percentage: 125%;
   }
 }
